Fix text size regression in Krita 5.0

QFont's constructor accepts pointSize as 'integer', so it truncates
the value we pass. Therefore we need to set it separately.

BUG:440826